force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/KimbleOne__RevenueGenerationModel__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Revenue Generation Model</label>
    <nameField>
        <label>RevenueGenerationModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Generation Model</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>