force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsCreditGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCreditGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Generated</label>
    <type>Checkbox</type>
</CustomField>