force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsExpensesNotional__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsExpensesNotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expenses Notional</label>
    <type>Checkbox</type>
</CustomField>