force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsNone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsNone__c</fullName>
    <formula>!(KimbleOne__IsUsageGenerated__c || KimbleOne__IsExpenseGenerated__c || KimbleOne__IsMilestoneGenerated__c || KimbleOne__IsPeriodGenerated__c || KimbleOne__IsCreditGenerated__c || KimbleOne__IsShareGenerated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is None</label>
    <type>Checkbox</type>
</CustomField>