force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsPeriodGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsPeriodGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Period Generated</label>
    <type>Checkbox</type>
</CustomField>