force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsPeriodItemGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsPeriodItemGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Period Item Generated</label>
    <type>Checkbox</type>
</CustomField>