force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsServicesNotional__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsServicesNotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Services Notional</label>
    <type>Checkbox</type>
</CustomField>