force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsShareGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsShareGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Share Generated</label>
    <type>Checkbox</type>
</CustomField>