force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsUnitGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUnitGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unit Generated</label>
    <type>Checkbox</type>
</CustomField>