force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsUsageGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUsageGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Usage Generated</label>
    <type>Checkbox</type>
</CustomField>