force-app/main/default/objects/KimbleOne__RevenueGenerationModel__c/fields/KimbleOne__IsUsageNotional__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUsageNotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Usage Notional</label>
    <type>Checkbox</type>
</CustomField>